# whi_3dobject_tracking

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml
data/: io_485.yaml  io_485_static_detector.yaml
include/m3t/: generator.h  modality.h  normal_viewer.h  realsense_camera.h  viewer.h
include/whi_3DObjectTracking/: whi_3DObjectTracking.h
include/whi_3dobject_tracking/: whi_3dobject_tracking.h
include/whi_3dobject_tracking/m3t/: v4l_camera.h
launch/: whi_3DObjectTracking.launch  whi_3dobject_tracking.launch
src/: whi_3DObjectTracking_node.cpp  whi_3dobject_tracking_node.cpp
src/m3t/: CMakeLists.txt  depth_modality.cpp  modality.cpp  normal_viewer.cpp  realsense_camera.cpp  region_modality.cpp  texture_modality.cpp  v4l_camera.cpp  viewer.cpp
src/sdk/: whi_3DObjectTracking.cpp  whi_3dobject_tracking.cpp
src/sdk/m3t/: realsense_camera.cpp  tracker.cpp
